# minimal_example

./: Cargo.toml
src/: main.rs
