[package]
name = "minimal_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miden = { git = "https://github.com/maticnetwork/miden", branch = "next", package = "miden", default-features = false}
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0.48"
#structopt = { version = "0.3", default-features = false }
math = { package = "winter-math", version = "0.4.1", default-features = false }
#rand-utils = { package = "winter-rand-utils", version = "0.4.1", optional = true }
#crypto = { package = "winter-crypto", version = "0.4.1", optional = true }
